# greentic-session

./: CHANGELOG.md  Cargo.toml  MIGRATION.md  MIGRATION_STATUS.md  README.md
.codex/: global_rules.md  repo_overview.md
.github/workflows/: auto-tag.yml  dependabot-automerge.yml  publish.yml
benches/: session_ops.rs
ci/: local_check.sh
examples/: quickstart.rs
src/: error.rs  inmemory.rs  lib.rs  mapping.rs  model.rs  redis_store.rs  store.rs
src/backends/: redis.rs
tests/: backend_factory.rs  cas_races.rs  context_fence.rs  inmemory_sessions.rs  mapping_determinism.rs  outbox_dedupe.rs  redis_backend.rs  ttl_and_touch.rs
