[package]
name = "greentic-session"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Greentic multi-tenant session manager with in-memory and Redis backends"
repository = "https://github.com/greentic-ai/greentic-session"
keywords = ["greentic", "session", "multi-tenant", "redis"]
categories = ["data-structures", "asynchronous"]
readme = "README.md"

[features]
default = ["redis"]
redis = ["dep:redis", "dep:tokio"]
inmemory = []
schema = ["dep:schemars"]
interfaces = ["dep:greentic-interfaces"]

[dependencies]
greentic-types = "^0.3"
greentic-interfaces = { version = "^0.4", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "parsing"] }
uuid = { version = "1", features = ["serde", "v4"] }
parking_lot = "0.12"
dashmap = "6"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"], optional = true }
redis = { version = "0.32", features = ["tokio-comp"], optional = true }
schemars = { version = "1", optional = true }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"


[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
serde_json = "1"
criterion = { version = "0.7", features = ["async"] }

[[bench]]
name = "session_ops"
harness = false
